--- a/src/NavBar/Nav.css
+++ b/src/NavBar/Nav.css
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 1000;
